Updated CSS code to fix bug on mobile landscape view.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -10;
+  z-index: -1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -33,21 +33,15 @@ body {
 
 .rightside,
 .leftside {
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
 }
 .rightside {
   background-color: rgba(200, 200, 200, 0.25);
-}
-
-.topRow {
-  height: 6%;
-}
-.bottomRow {
-  height: 44%;
-}
-.middleRow {
-  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 /* ********* */
@@ -63,7 +57,6 @@ body {
 }
 .topIntroBoxRow,
 .bottomIntroBoxRow {
-  height: 15%;
   border: rgb(0, 165, 185) 10px solid;
   font-family: "Big Shoulders Stencil Text", cursive;
   text-shadow: -2px 2px 4px #181818;
@@ -79,7 +72,6 @@ body {
   border-top: none;
 }
 .middleIntroBoxRow {
-  height: 70%;
   letter-spacing: 2px;
   padding-left: 30px;
   display: flex;
@@ -90,6 +82,9 @@ body {
   .leftside,
   .aboutMeContentLeftSide {
     display: none;
+  }
+  .rightside {
+    min-width: 100vw;
   }
 }
 
@@ -154,9 +149,6 @@ body {
   font-size: max(3vmin, 1.5rem);
   letter-spacing: 6px;
 }
-
-/* .boxItems:hover {
-} */
 
 .contentLinksBox {
   height: 100%;
